name:                hmailattachment
version:             0.1.0.0
Synopsis:            Extract attachment from email
description:         Please see README.md
homepage:            http://github.com/githubuser/hmailattachment#readme
license:             BSD3
license-file:        LICENSE
Author:              Romain Gerard
Maintainer:          Romain Gerard <romain.gerard@erebe.eu>
copyright:           2015 Romain Gerard
category:            Mail
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AttachmentParser
  default-language:    Haskell2010
  build-Depends:       base >= 4.7 && < 5
                     , regex-pcre
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , base64-bytestring
                     , transformers
                     , MissingH


executable hmailattachment
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-Depends:       base, hmailattachment 
  default-language:    Haskell2010

test-suite hmailattachment-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmailattachment
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hmailattachment
